# h2o-c-library

./: BUILDING.md  CMakeLists.txt  Dockerfile  NOTICE  README.md  THIRD-PARTY-LICENSES.txt  _config.yml  build.sh  scaffold.yaml
include/h2o-c-library/: h2o_c.h
src/: h2o_c.c
tests/: CMakeLists.txt  build.sh
tests/src/: test_h2o.c
